# acx-gui

./: README.md  example_config.yaml  flake.nix  main.py  pyproject.toml
example_server/cfg/: entry_list.ini  server_cfg.ini
example_server/content/: README.md
example_server/content/cars/a3dr_lambo_diablo_vt/: data.acd
example_server/content/cars/ag_subaru_impreza_wrx_tuned/: data.acd
example_server/content/cars/cim_2011_redbull/: data.acd
example_server/content/cars/go4_202x_tire testing_sized/: data.acd
example_server/content/tracks/acu_unitedstates/: models_a.ini
example_server/content/tracks/acu_unitedstates/a/data/: drs_zones.ini
example_server/content/tracks/baku_2022/: models.ini
example_server/content/tracks/baku_2022/data/: drs_zones.ini
example_server/content/tracks/csp/acu_unitedstates/a/data/: surfaces.ini
example_server/content/tracks/csp/ks_laguna_seca/data/: surfaces.ini
example_server/content/tracks/csp/ks_zandvoort/data/: surfaces.ini
example_server/content/tracks/csp/monza/data/: surfaces.ini
example_server/content/tracks/csp/rt_california_highway/normal/data/: surfaces.ini
example_server/content/tracks/csp/singapore/data/: surfaces.ini
example_server/content/tracks/csp/spa/data/: surfaces.ini
example_server/content/tracks/csp/zandvoort2023/2023/data/: surfaces.ini
example_server/content/tracks/rt_california_highway/: models_normal.ini
example_server/content/tracks/zandvoort2023/: models_2023.ini
